--- a/python/Web2_python/211006/객체제작.md
+++ b/python/Web2_python/211006/객체제작.md
@@ -1,12 +1,8 @@
-객체 제작 - 클래스 만들기
+# 객체 제작 - 클래스 만들기     
 instance를 보통 객체라고 부름 
-객체지향 프로그램에서는 함수라는 말 대신 메소드, 행위 / 변수라는 말 대신 속성, 필드, 상태 사용 
+객체지향 프로그램에서는 함수라는 말 대신 메소드, 행위 / 변수라는 말 대신 속성, 필드, 상태 사용      
 
-객체지향 프로그래밍을 사용하는 이유
-프로그램이 커지는 상황에서 필연적으로 발생하는 복잡성을 줄이기 위해
-instance의 소속을 알 수 있기에 연관성을 알 수 있음.
+## 객체지향 프로그래밍을 사용하는 이유
+* 프로그램이 커지는 상황에서 필연적으로 발생하는 복잡성을 줄일 수 있음.
+* instance의 소속을 알 수 있기에 연관성을 알 수 있음.
 
-c1.add() / add(10,10)
-c1. subtract() / subtract(10,10)
-위의 숫자가 같은 이유는 첫번째는 같은 instance이기에 , 두번째는 우연의 일치일 수도 있음.
-또한 유지, 보수가 편리해짐.
