--- a/python/Web2_python/211006/객체와 변수.md
+++ b/python/Web2_python/211006/객체와 변수.md
@@ -20,6 +20,6 @@ User-id 에 저장된 값을 불러오는 것이 get이다.
 그 안에 돈을 저축한다 > set   
 그 안에 돈이 얼마나 들어 있는지 본다 > get   
 
-#### SET과 GET 사용이유
+*SET과 GET 사용이유*
 SET, GET 메소드를 사용하는 이유는 외부로부터 변수값에 직접적으로 접근하는것을 막기 위해서다.     
 직접 접근하게 되면 값이 변하게 되고 그러면 데이터 무결성이 깨질 수 있기 때문이다. 
