--- a/python/Web2_python/211006/상속.md
+++ b/python/Web2_python/211006/상속.md
@@ -1,8 +1,7 @@
-상속
-기존에 있던 객체에 새로운 기능을 추가하여 새로운 객체를 만드는 것을 상속이라고 함.
-기존의 기능을 그대로 상속하며 새로운 기능을 추가하는 것. 
+# 상속
 
-자신이나 타인이 만들어논 객체에 새로운 기능을 추가하여 새로운 객체를 만들어내는 것을 의미함.
+기존에 있던 객체에 새로운 기능을 추가하여 새로운 객체를 만드는 것을 상속이라고 함.     
+즉, 기존의 기능을 그대로 상속하며 새로운 기능을 추가하는 것. 
 
 ```
 class Class1(object):
@@ -20,3 +19,4 @@ c3 = Class3()
 print(c3, c3.method1())
 print(c3, c3.method2())
 ```
+
