--- a/python/Web2_python/211006/상속.md
+++ b/python/Web2_python/211006/상속.md
@@ -3,6 +3,10 @@
 기존에 있던 객체에 새로운 기능을 추가하여 새로운 객체를 만드는 것을 상속이라고 함.     
 즉, 기존의 기능을 그대로 상속하며 새로운 기능을 추가하는 것. 
 
+Python 문법에서 상속(inheritance)은, 부모 클래스(Super Class)의 속성(property)과 함수(method)를 그대로 물려 받는 개념이다.     
+Super Class의 내용을 자식 클래스(Sub Class)가 물려 받게 되면, Super Class의 속성과 함수를 자식 클래스에서 사용할 수 있다.     
+자식클래스의 함수를 재정의하게 되면, 재정의된 함수로 실행된다.      
+
 ```
 class Class1(object):
     def method1(self):
