--- a/python/Web2_python/211006/절차지향과 객체지향.md
+++ b/python/Web2_python/211006/절차지향과 객체지향.md
@@ -1,6 +1,6 @@
 # 절차지향과 객체지향
 
-### 절차지향 프로그래밍(Procedural Programming) 
+### 절차지향 프로그래밍 (Procedural Programming) 
 
 * 위에서 아래로 순차적인 처리가 중요시 되며, 프로그램 전체가 유기적으로 연결되도록 만드는 프로그래밍 기법.     
 * 컴퓨터의 처리 방식과 비슷하기 때문에 객체지향 언어에 비해 더 빨리 처리되어 시간적으로 유리하다.
@@ -8,7 +8,7 @@
 * 코드끼리 유기성이 높아 새로운 데이터나 기능을 추가하기 어렵고, 유지 및 보수가 어려움
 * 계산 중심적인 언어 / 함수가 중심이 되고 데이터는 보조기능을 하는 언어
 
-### 객체지향 프로그래밍
+### 객체지향 프로그래밍 (Object Oriented Programming)
 
 * 각 객체에서 수행할 수 있는 함수랑 필드를 묶어서 하나의 클래스로 만들어, 기능을 객체로 만들어 동작하는 방식.
 * 캡슐화로 인해 유지보수가 용이하고, 상속과 같이 코드 재사용이 용이.
